<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

        <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:padding="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/logo" />
    
     <Button
        android:id="@+id/startTime"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="12"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
       	android:hint="@string/start_time"
   		android:onClick="showTimePickerDialogS"  >
    </Button>
    
    <Button
        android:id="@+id/endTime"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="12"
       	android:hint="@string/end_time"
   		android:onClick="showTimePickerDialogE"  >
    </Button>
    
   <Button
        android:id="@+id/dateEvent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="12"
       	android:hint="@string/date"
   		android:onClick="showDatePickerDialog"  >
    </Button>
    
    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:entries="@array/country_arrays"
        android:prompt="@string/country_prompt" />
 
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/create"
        android:onClick="createEventButtonClicked" />

</LinearLayout>